# autondance-demo-server

./: .gitignore  README.md  annotation.json  demo.json  main.py  new_annotation.json  notebook.ipynb  pyproject.toml  requirements.txt
data/: calendar.json  records.json
scripts/: classrooms.json  migrate.py  new_seats.json  seats.json  student_seats.json  students.json
